versioned_docs/version-4.1.x/reference/functions/Show-ADTInstallationProgress.mdx
---
id: Show-ADTInstallationProgress
title: Show-ADTInstallationProgress
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Displays a progress dialog in a separate thread with an updateable custom message.

## SYNTAX

```powershell
Show-ADTInstallationProgress [[-StatusMessage] <String>] [[-StatusMessageDetail] <String>]
 [[-StatusBarPercentage] <Double>] [[-MessageAlignment] <DialogMessageAlignment>]
 [[-WindowLocation] <DialogPosition>] [-NotTopMost] [-AllowMove] -Title <String> -Subtitle <String>
 [<CommonParameters>]
```

## DESCRIPTION

Creates a WPF window in a separate thread to display a marquee style progress ellipse with a custom message that can be updated.
The status message supports line breaks.

The first time this function is called in a script, it will display a balloon tip notification to indicate that the installation has started (provided balloon tips are enabled in the config.psd1 file).

## EXAMPLES

### EXAMPLE 1

```powershell
Show-ADTInstallationProgress
```

Uses the default status message from the strings.psd1 file.

### EXAMPLE 2

```powershell
Show-ADTInstallationProgress -StatusMessage 'Installation in Progress...'
```

Displays a progress dialog with the status message 'Installation in Progress...'.

### EXAMPLE 3

```powershell
Show-ADTInstallationProgress -StatusMessage "Installation in Progress...`nThe installation may take 20 minutes to complete."
```

Displays a progress dialog with a multiline status message.

### EXAMPLE 4

```powershell
Show-ADTInstallationProgress -StatusMessage 'Installation in Progress...' -WindowLocation 'BottomRight' -NotTopMost
```

Displays a progress dialog with the status message 'Installation in Progress...', positioned at the bottom right of the screen, and not set as topmost.

## PARAMETERS

### -StatusMessage

The status message to be displayed.
The default status message is taken from the imported strings.psd1 file.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 1
Default value: [System.Management.Automation.Language.NullString]::Value
Accept pipeline input: False
Accept wildcard characters: False
```

### -StatusMessageDetail

The status message detail to be displayed with a fluent progress window.
The default status message is taken from the imported strings.psd1 file.

```yaml
Type: String
Parameter Sets: (All)
Aliases:

Required: False
Position: 2
Default value: [System.Management.Automation.Language.NullString]::Value
Accept pipeline input: False
Accept wildcard characters: False
```

### -StatusBarPercentage

The percentage to display on the status bar.
If null or not supplied, the status bar will continuously scroll.

```yaml
Type: Double
Parameter Sets: (All)
Aliases:

Required: False
Position: 3
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -MessageAlignment

The text alignment to use for the status message.

```yaml
Type: DialogMessageAlignment
Parameter Sets: (All)
Aliases:
Accepted values: Left, Center, Right

Required: False
Position: 4
Default value: Center
Accept pipeline input: False
Accept wildcard characters: False
```

### -WindowLocation

The location of the dialog on the screen.

```yaml
Type: DialogPosition
Parameter Sets: (All)
Aliases:
Accepted values: Default, TopLeft, Top, TopRight, TopCenter, Center, BottomLeft, Bottom, BottomRight, BottomCenter

Required: False
Position: 5
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -NotTopMost

Specifies whether the progress window shouldn't be topmost.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -AllowMove

Specifies that the user can move the dialog on the screen.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -Subtitle

The subtitle of the window to be displayed with a fluent progress window.
Optionally used to override the subtitle defined in the strings.psd1 file.

```yaml
Type: String
Parameter Sets: (All)
Aliases: WindowSubtitle

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Title

The title of the window to be displayed.
Optionally used to override the active DeploymentSession's InstallTitle value.

```yaml
Type: String
Parameter Sets: (All)
Aliases: WindowTitle

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not generate any output.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Show-ADTInstallationProgress](https://psappdeploytoolkit.com/docs/reference/functions/Show-ADTInstallationProgress)
